--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Periodic Table</title>
 </head>
 
-<body style="background-color: azure;">
+<body style="background-color: lightblue;">
 
     <h1 style="text-align: center;">Periodic Table</h1>
     <table border="0" cellspacing="0" cellpadding="5"
@@ -159,7 +159,7 @@
 
     <hr>
 
-    <p style="text-align: center;">i hope i did it correctly</p>
+    
 </body>
 
 </html>
